# luminal

./: Cargo.toml
.github/workflows/: build-examples.yml  llama-runtime-test.yml  phi-runtime-test.yml  simple-example-test.yml  test-examples.yml  test.yml
crates/luminal_2/: Cargo.toml
crates/luminal_2/src/: run.rs
crates/luminal_cuda/src/: lib.rs
examples/moondream/src/: main.rs
examples/phi/src/: loader.rs
examples/qwen/: Cargo.toml  cache_fix.patch  parallel-graph-compilation-plan.md  parallel-graph-definition-plan.md  test_cache.py  todo.md
examples/qwen/src/: main.rs
examples/qwen/src/parallel_graph/: assembly.rs  benchmarks.rs  builder.rs  debug.rs  integration_tests.rs  mod.rs  model_builder.rs  progress.rs  specs.rs
examples/qwen_luminal2/: Cargo.toml  README.md
examples/qwen_luminal2/src/: main.rs  parallel_demo.rs  parallel_only.rs
examples/simple/: CALIBRATION_SETUP_SUMMARY.md  Cargo.toml  PARALLEL_VALIDATION_SUMMARY.md  run_calibration.sh  test_parallel_correctness.sh  test_simple_calibration.sh
examples/simple/results/: summary.md
examples/simple/src/: fixed_main.rs  main.rs
examples/simple/tests/: binary_cache_comparison.rs  compilation_calibration.rs  integration_tests.rs  mod.rs  parallel_compilation_test.rs  parallel_validation.rs
examples/simple_parallel/: Cargo.toml  PERFORMANCE_DEMO.md  README.md  compare_with_simple.sh  exact_comparison.sh
examples/simple_parallel/src/: demo.rs  exact_replica.rs  fixed_exact.rs  main.rs  neural_demo.rs  parallel_fixed.rs  verification.rs
examples/yolo_v8/src/: main.rs  model.rs
installers/: GPU_RUNNERS.md  NVIDIA_SETUP.md  README.md  setup-nvidia.sh
