[package]
name = "luminal"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
description = "Deep learning at the speed of light."
license = "MIT OR Apache-2.0"

[dependencies]
as-any = "0.3.1"
colored = "2.0.4"
dyn-clone = "1.0.12"
egg = "0.9.5"
generational-box = "0.5.6"
half = "*"
itertools = "0.11.0"
num-traits = "0.2.16"
petgraph = "0.6.4"
rand = "0.9.2"
regex = "1.9.5"
rustc-hash = "2.1.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.140"
symbolic_expressions = "5.0.3"
term_size = "0.3.2"
thread_local = "1.1.8"
tinyvec = { version = "1.6.0", features = ["serde"] }
urlencoding = "2.1.2"
uuid = { version = "1.7.0", features = ["v4"] }
webbrowser = "1.0.0"

[dev-dependencies]
dfdx = { version = "0.13", features = ["f16"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[workspace]
members = [
    "examples/*",
    "crates/luminal_cpu",
    "crates/luminal_nn",
    "crates/luminal_training",
    "docs/company",
]
exclude = [
    "examples/yolo_v8",
    "crates/luminal_cuda",
    "crates/luminal_metal",
    "crates/luminal_2",
    "demos/flash_attention",
]
