[package]
name = "qwen"
version = "0.1.0"
edition = "2024"

[features]
metal = ["dep:luminal_metal"]
cuda = ["dep:luminal_cuda"]

[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_cpu = { path = "../../crates/luminal_cpu" }
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5.0"
memmap2 = "0.9.4"
colored = "2.1.0"
itertools = "0.12.1"
tokenizers = "0.21"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"